[metadata]
name = pytss_toolslike
author = Erik Larsson
author_email = who+github@cnackers.org
license = GPL-3.0-or-later
description = Tools like encoder and decoder for tpm2-pytss
url = https://github.com/whooo/pytss_toolslike
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages =
    pytss_toolslike
setup_requires =
    tpm2_pytss
install_requires =
    tpm2_pytss
